[tool.poetry]
name = "htb"
version = "0.1.0"
description = ""
authors = ["jkazimierczak <77862767+jkazimierczak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
questionary = "^1.10.0"


[tool.poetry.scripts]
htb = "htb.__main__:entry_point"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
