[tool.poetry]
name = "htb"
version = "0.1.3"
description = ""
authors = ["jkazimierczak <77862767+jkazimierczak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
questionary = "^1.10.0"
cryptography = "^40.0.1"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"


[tool.poetry.scripts]
htb = "htb.__main__:entry_point"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
